tests/baselines/reference/parserIfStatement2.errors.txt
parserIfStatement2.ts(1,5): error TS2304: Cannot find name 'a'.


==== parserIfStatement2.ts (1 errors) ====
    if (a) {
        ~
!!! error TS2304: Cannot find name 'a'.
    }